<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/historical_bacground_2"
    tools:context="MainActivity">

    <TextView
        android:id="@+id/TheHistoryApp"
        android:layout_width="239dp"
        android:layout_height="117dp"
        android:layout_marginTop="96dp"
        android:layout_marginBottom="61dp"
        android:fontFamily="sans-serif-black"
        android:lineSpacingExtra="10sp"
        android:text="@string/appHeader"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textColor="#000000"
        android:textSize="34sp"
        android:textStyle="bold|italic"
        android:typeface="normal"
        app:layout_constraintBottom_toTopOf="@+id/textView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="TextSizeCheck" />

    <Button
        android:id="@+id/buttonClear"
        android:layout_width="88dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginBottom="352dp"
        android:backgroundTint="@color/grey"
        android:text="@string/buttonText"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.157"
        app:layout_constraintStart_toEndOf="@+id/editTextNumber"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="134dp"
        android:layout_height="50dp"
        android:layout_marginStart="92dp"
        android:layout_marginBottom="8dp"
        android:fontFamily="sans-serif-black"
        android:text="@string/EnterAge"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/editTextNumber"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="TextSizeCheck" />

    <EditText
        android:id="@+id/editTextNumber"
        android:layout_width="192dp"
        android:layout_height="48dp"
        android:layout_marginStart="92dp"
        android:layout_marginBottom="352dp"
        android:autofillHints="number"
        android:background="#80FFFFFF"
        android:ems="10"
        android:hint="@string/textHint"
        android:inputType="number"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="386dp"
        android:layout_height="260dp"
        android:layout_marginBottom="28dp"
        android:background="#80FFFFFF"
        android:fontFamily="sans-serif-black"
        android:hint="@string/Generate_hint"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="24sp"
        android:textStyle="bold|italic"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.48"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/buttonGenerateHistory"
        android:layout_width="192dp"
        android:layout_height="57dp"
        android:backgroundTint="@color/grey"
        android:text="@string/buttonText2"
        app:layout_constraintBottom_toTopOf="@+id/textView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.42"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextNumber"
        app:layout_constraintVertical_bias="1.0" />


</androidx.constraintlayout.widget.ConstraintLayout>